--- a/client/src/app/spreadsheet/components/spreadsheet.scss
+++ b/client/src/app/spreadsheet/components/spreadsheet.scss
@@ -646,7 +646,7 @@ $blank-row-height: 32px;
           }
           &:not([disabled='true']) {
             &:hover {
-              background-color: $color-surface-d;
+              background-color: $color-surface-c;
             }
           }
         }
