--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -2,6 +2,7 @@
   [config]="config"
   [columns]="columns"
   [rows]="rows"
+  (action)="console.log($event)"
   (columnAction)="console.log($event)"
   (rowAction)="console.log($event)"
   (cellAction)="console.log($event)"
