refactor: update spreadsheet HTML and group data structure to enhance clarity and consistency in displaying empty states and metadata handling

--- a/client/src/app/spreadsheet/spreadsheet.html
+++ b/client/src/app/spreadsheet/spreadsheet.html
@@ -280,7 +280,7 @@
                       @if (group.label) {
                         {{ group.label }}
                       } @else {
-                        <label>(Empty)</label>
+                        <i class="text-sm text-color-secondary">Empty</i>
                       }
                     </div>
                     <div
