--- a/client/src/app/spreadsheet/spreadsheet.scss
+++ b/client/src/app/spreadsheet/spreadsheet.scss
@@ -422,7 +422,7 @@ $blank-row-height: 32px;
             will-change: transform;
           }
           .column-drag-preview {
-            background-color: $color-surface-c !important;
+            background-color: #2424260d !important;
             > * {
               display: none;
             }
