refactor: update row height calculations to use computed properties for improved consistency and clarity

--- a/client/src/app/spreadsheet/spreadsheet.html
+++ b/client/src/app/spreadsheet/spreadsheet.html
@@ -188,7 +188,7 @@
     [rightColumns]="tableColumnService.rightColumns()"
     [rows]="tableRowService.rows()"
     [rootGroup]="tableGroupService.rootGroup"
-    [rowHeight]="tableRowService.state.rowHeight"
+    [rowHeight]="tableRowService.rowHeight()"
   >
     <div class="pane pane-left" [style.width.px]="virtualScroll.scrollDivideOffset">
       <div
